# IntentRecognizer

./: CMakeLists.txt  README.md
include/: Entity.h  EntityExtractor.h  Intent.h  IntentClassifier.h  Tokenizer.h
src/: Entity.cpp  EntityExtractor.cpp  Intent.cpp  IntentClassifier.cpp  Tokenizer.cpp  main.cpp  test.cpp
